apps/test/podinfo/chart/templates/podinfo-http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: podinfo-http-route
  namespace: podinfo
spec:
  parentRefs:
    - name: kookiedotmonster
      namespace: gateway
  hostnames:
    - "podinfo.home.kookie.monster"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: podinfo
          port: 9898
